Task Manager-Backend/src/main/java/com/example/taskmanager/error/TaskUnknownException.java
package com.example.taskmanager.error;

public class TaskUnknownException extends RuntimeException{
    public TaskUnknownException() {
        super("Something gone wrong.");
    }
}
